--- a/PosterBoardFrontend/index.html
+++ b/PosterBoardFrontend/index.html
@@ -13,7 +13,7 @@
     <div class="siteHeader">
         <input type="button" value="Create Post" id="createPostButton" class="buttons">
         <p class="title">
-            Project Title Here
+            Poster Board
         </p>
         <input type="button" value="What is this Site?" style="float: right;" id="infoButton" class="buttons">
     </div>
